temporary overflow-x fix

--- a/src/assets/scss/document/_footer.scss
+++ b/src/assets/scss/document/_footer.scss
@@ -22,7 +22,7 @@
 
   > .pageNumber {
     position: absolute;
-    bottom: 0;
+    bottom: 0.5cm;
     font-family: 'headers';
     color: rgb(213, 187, 118);
     font-size: 12pt;
